--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	// Polymer for server-side resource pack hosting (translations)
+	modImplementation include("eu.pb4:polymer-resource-pack:0.15.1+1.21.11")
 	modImplementation include("eu.pb4:polymer-autohost:0.15.1+1.21.11")
 }
 
